--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "newsmania",
+  "homepage": "https://naman1597.github.io/NewsMania-App",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.1",
+    "gh-pages": "^4.0.0",
     "loading-progress-bar": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,6 +42,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_NEWS_API"
     ]
   }
 }
