--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.1",
-    "gh-pages": "^4.0.0",
     "loading-progress-bar": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,5 +47,8 @@
     "whitelist": [
       "REACT_APP_NEWS_API"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
